--- a/public/news.html
+++ b/public/news.html
@@ -44,14 +44,14 @@
       <div id="articles">
       </div>
 
-      <div id="comments">
+      <div id="notes">
 
       </div>
       
       <div id="textBox">
-            <textarea id="commentTitle" rows="4" cols="5" placeholder="Title" ></textarea>
-            <textarea id="comment" rows="8" cols="5" placeholder="Comment"></textarea>
-            <button id="submit" type="submit">Comment</button>
+            <textarea id="commentTitle" rows="1" cols="3" placeholder="Title" ></textarea>
+            <textarea id="comment" rows="4" cols="6" placeholder="Comment"></textarea>
+            <button type="button" class="btn btn-light" id="submit">Comment</button>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
