--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Scraping With Mongoose</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
-      body { background-color: #F2F6D0 }
+      body { background-color: #bef789 }
+      .jumbotron{
+        margin: 30px;
+        font-size: 35px;
+        background-color: beige;
+      }
+
+      .jumbotron .display-4{
+        text-align: center;
+              }
+
       #wrapper {
         width: 960px;
         margin-left: auto;
@@ -16,6 +28,7 @@
         overflow: auto;
         width: 60%;
         height: 700px;
+        font-size: 10px;
       }
       #notes {
         float: right;
@@ -38,15 +51,22 @@
     </style>
   </head>
   <body>
+      <div class="jumbotron">
+          <h1 class="display-4">Hello, world!</h1>
+          <p class="lead">All New from All Over the World</p>
+          <hr class="my-4">
+          <p>We are here to inform you.</p>
+          <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
+        </div>
     <div id="wrapper">
-      <h1>Today's News - by Kaan</h1>
-      <h2><i>It is your right to know everything about the world</i></h2>
+      
       <div id="articles">
         
       </div>
       <div id="notes"></div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="app.js"></script>
   </body>
 </html>
